Update 'doc/.tx/config' - Build #152
  http://cookingwithsalt.org/job/salt/job/transifex/152/

Signed-off-by: Pedro Algarvio <pedro@algarvio.me>

--- a/doc/.tx/config
+++ b/doc/.tx/config
@@ -4820,3 +4820,9 @@ source_file = _build/locale/topics/releases/releasecandidate.pot
 source_lang = en
 source_name = topics/releases/releasecandidate.rst
 
+[salt.topics--targeting--range]
+file_filter = locale/<lang>/LC_MESSAGES/topics/targeting/range.po
+source_file = _build/locale/topics/targeting/range.pot
+source_lang = en
+source_name = topics/targeting/range.rst
+
