--- a/debian/rules
+++ b/debian/rules
@@ -4,8 +4,8 @@ PKGFILES = pkg/*.service pkg/*.upstart pkg/*.logrotate
 SALT_BIN = common minion master syndic
 
 %:
-#	make -C doc html
-#	make -C doc man && cp -p doc/_build/man/* doc/man
+	make -C doc html
+	make -C doc man && cp -p doc/_build/man/* doc/man
 	cp $(PKGFILES) debian
 	for d in $(SALT_BIN); do \
 	    cp pkg/salt.postrm debian/salt-$${d}.postrm; done
