--- a/tests/integration/files/conf/cloud.providers.d/azure.conf
+++ b/tests/integration/files/conf/cloud.providers.d/azure.conf
@@ -2,3 +2,6 @@ azure-config:
   provider: azure
   subscription_id: ''
   certificate_path: ''
+  ssh_username: ''
+  ssh_password: ''
+  media_link: ''
